<resources>
    <string name="app_name">Safari Travel</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="btn_register">Register</string>
    <string name="register">Register</string>
    <string name="clic_to_login">I have an account</string>
    <string name="clic_to_register">Create an Account instead</string>
    <string name="separator">----------------- Or---------------------</string>
    <string name="menu_logout">Logout</string>
    <string name="m_profil">My profil</string>
    <string name="home_title">Welcome <b>%s</b>, Choose the country you wanted to go to</string>
    <string name="title_activity_country">CountryActivity</string>
    <string name="tab_country_info">Info</string>
    <string name="tab_all_photos">Photos</string>
    <string name="tab_my_photos">My photos</string>
    <string name="tab_challenges">Challenges</string>
    <string name="tab_safary">Safary</string>
    <string name="official_languages">OFFICIAL LANGUAGES :</string>
    <string name="money">MONEY :</string>
    <string name="population">POPULATION :</string>
    <string name="capital">CAPITAL :</string>
    <string name="official_name">OFFICIAL NAME :</string>
    <plurals name="count_like">
        <item quantity="zero">%d like</item>
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="notification_title">Challenge %s</string>
    <string name="notification_body">%s like your photo</string>
    <string name="default_notification_channel_id">app.fatoumata.safarytravel</string>
    <string name="default_notification_channel_name">Safari Travel Channel</string>
    <string name="app_package">app.fatoumata.safarytravel</string>
    <string name="first_run">Complete your profile</string>
    <string name="btn_save">Save</string>
</resources>